tests/baselines/reference/optionalConstructorArgInSuper.errors.txt
optionalConstructorArgInSuper.ts(9,1): error TS2454: Variable 'd2' is used before being assigned.


==== optionalConstructorArgInSuper.ts (1 errors) ====
    class Base {
        constructor(opt?) { }
        foo(other?) { }
    }
    class Derived extends Base {
    }
    var d = new Derived(); // bug caused an error here, couldn't select overload
    var d2: Derived;
    d2.foo(); 
    ~~
!!! error TS2454: Variable 'd2' is used before being assigned.
    